REGRESSION(PSON): Process swapping code doesn't set DisplayID in WebContent process https://bugs.webkit.org/show_bug.cgi?id=192290

Reviewed by Simon Fraser.

Fixed the bug by updating the DisplayID upon attaching to a WebContent process
after a process swap as well as after the previous WebContent process had crashed.

Unfortunately no new tests since WebKitTestRunner / DumpRenderTree should use 0 as DisplayID
as they have an off-screen NSWindow. The issue that this results in no fallback for
the animation timer is tracked by webkit.org/b/192448.

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::didRelaunchProcess):


Canonical link: https://commits.webkit.org/207052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238927 268f45cc-cd09-0410-ab3c-d52691b4dbfc